--- a/style.css
+++ b/style.css
@@ -5,8 +5,9 @@
 }
 
 html {
-    scroll-behavior:smooth;
+    scroll-behavior: smooth;
     font-family: 'Roboto', sans-serif;
+
 }
 
 .nav-bar {
@@ -14,7 +15,6 @@ html {
     justify-content: center;
     align-items: center;
     position: fixed;
-    padding: 0 10%;
     width: 100%;
     height: 6rem;
     background-color: transparent;
@@ -22,7 +22,7 @@ html {
     transition: all 0.3s ease
 }
 
-.nav-bar.transparent-bg {
+.nav-bar.sticky-bg {
     background-color: #20232a;
 }
 
@@ -49,14 +49,22 @@ html {
 .hero-section {
     background: url("./pawel-czerwinski-prMn9KINLtI-unsplash.jpg");
     background: linear-gradient(to bottom, #41B3A3, #1C344C);
+
     background: linear-gradient(to bottom, #3498db, #2c3e50);
     color: #fff;
     padding: 7rem 10% 3rem;
-    display: flex;
+
+    /* display: flex;
     justify-content: space-between;
-    flex-wrap: wrap;
+    flex-wrap: wrap; */
+
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
 }
 
+.mobile-hero-pic {
+    display: none;
+}
 
 .title {
     margin-top: 4rem;
@@ -65,7 +73,7 @@ html {
 .title p {
     font-size: 1.5rem;
     font-weight: normal;
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
 }
 
 .title h1 {
@@ -74,54 +82,59 @@ html {
 }
 
 .subtitle h2 {
+    margin-top: 1rem;
     font-family: 'Montserrat', sans-serif;
     font-size: 2rem;
-    margin-top: 1rem;
     font-weight: normal;
 }
 
-.circle-down{
+.cursor {
     display: inline-block;
-    margin: auto;
+    animation: blink 0.7s infinite;
 }
 
-.circle-down .fa-solid{
-    cursor: pointer;
-    font-size: 2.5rem;
-    margin-top: 2.5rem;
-    color: #FFD700;
-    animation: bounce 1s infinite;
-}
+@keyframes blink {
 
-@keyframes bounce {
-    0%, 20%, 50%, 80%, 100% {
-        transform: translateY(0);
+    0%,
+    100% {
+        opacity: 1;
     }
-    40% {
-        transform: translateY(-20px);
-    }
-    60% {
-        transform: translateY(-10px);
+
+    50% {
+        opacity: 0;
     }
 }
 
-.circle-down p{
-    margin-top: 1rem;
-    font-size: 1.2rem;
+.button-container {
+    display: flex;
+    gap: 2rem;
+    margin-top: 3rem;
+    text-align: center;
 }
 
-.circle-down a{
+.button {
+    display: inline-block;
+    padding: 1rem 2rem;
     text-decoration: none;
     color: #fff;
+    font-size: 1.2rem;
+    background-color: #FFD700;
+    border: 2px solid #FFD700;
+    border-radius: 5px;
+    transition: all 0.3s ease;
+    cursor: pointer;
 }
 
-
+.button:hover {
+    background-color: transparent;
+    color: #FFD700;
+}
 
 
 @media screen and (max-width: 768px) {
 
-    .mobile-nav-bar-container{
-        background-color: #192b28;
+    .mobile-nav-bar-container {
+        background-color: #749cec;
         height: 4rem;
         padding: 1rem 2rem;
     }
@@ -129,7 +142,7 @@ html {
     .bar {
         width: 25px;
         height: 3px;
-        background-color: #f7f303;
+        background-color: #2b3856;
         margin: 6px 0;
         transition: 0.4s;
     }
@@ -151,11 +164,13 @@ html {
         transform: rotate(45deg) translate(-6px, -8px);
     }
 
-    .nav-bar{
-        background-color: #21423e;
-        position: static;
-        padding: 1rem 2rem;
-        height: 14.5rem;
+    .nav-bar {
+        background-color: #74a5eb;
+        position: absolute;
+        padding: 2rem;
+        height: 15rem;
+        transform: translateY(-20rem);
+
     }
 
     .nav-links {
@@ -166,39 +181,92 @@ html {
         gap: 1rem;
     }
 
-    .hero-section{
-        transform: translateY(-14.5rem);
-        transition: all 0.5s;
+    .nav-links a:hover {
+        color: #2b3856;
     }
 
-    .down-hero-section{
+    .down-nav-bar {
         transform: translateY(0px);
     }
+
+    .hero-section {
+        /* transform: translateY(-14.5rem); */
+        background: linear-gradient(to bottom, #7cacee, #678ec5);
+        transition: all 0.5s;
+        display: block;
+        padding: 0rem 5% 3rem;
+    }
+
+    .mobile-hero-pic {
+        display: block;
+        background-image: url("./Images/Blue\ Hero\ bg.PNG");
+        background-size: cover;
+
+    }
+
+    .mobile-hero-pic img {
+        width: 100%;
+    }
+
+
+    .hero-image {
+        display: none;
+        text-align: center;
+    }
+
+
+    .title {
+        margin-top: 0rem;
+    }
+
+    .title p {
+        display: none;
+    }
+
+
+    .title h1 {
+        margin-top: 2rem;
+        font-size: 2rem;
+        text-align: center;
+        color: #2b3856;
+
+    }
+
+    .subtitle h2 {
+        margin-top: 1rem;
+        text-align: center;
+        font-size: 1.5rem;
+        color: #e9e9e9;
+
+    }
+
+    .button-container {
+        margin-top: 2rem;
+        justify-content: center;
+
+    }
+
+    .button {
+        padding: 1rem 1rem;
+        font-size: 1rem;
+        width: 100%;
+        background-color: #2b3856;
+        border: 1px solid #2b3856;
+    }
+
+    .button:hover {
+        background-color: transparent;
+        color: #2b3856;
+    }
+
 }
-
-.cursor{
-    display: inline-block;
-    animation: blink 0.7s infinite;
-  }
-
-  @keyframes blink {
-    0%, 100% {
-      opacity: 1;
-    }
-    50% {
-      opacity: 0;
-    }
-  }
-
-
-
 
 
 /*******************************/
 /* Section 2: */
 
 .about-me {
-    background: #20232a;
+    background: #4b576e;
     /* Dark background color */
     padding: 3rem 10%;
     color: #fff;
@@ -206,13 +274,14 @@ html {
 
 .content {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     gap: 5%;
 }
 
 .profile-container {
-    flex-basis: 40%;
+    /* flex-basis: 40%; */
+    flex-basis: auto;
     overflow: hidden;
     border-radius: 15px;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
@@ -220,8 +289,10 @@ html {
 
 .profile-pic {
     width: 100%;
+    height: 400px;
     border-radius: 15px;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
+    background: #3C4558;
 }
 
 .profile-container:hover .profile-pic {
@@ -246,9 +317,72 @@ html {
 
 .text-content p {
     font-size: 1.8rem;
-    margin-bottom: 1.5rem;
+    margin-bottom: 1.2rem;
     line-height: 1.6;
 }
+
+.progress-main-container {
+    display: none;
+}
+
+
+
+@media screen and (max-width: 768px) {
+    .about-me {
+        padding: 3rem 5%;
+    }
+
+    .content {
+        display: block;
+    }
+
+    .profile-container {
+        display: none;
+    }
+
+    .about-me h2 {
+        position: static;
+        width: 100%;
+        font-size: 2rem;
+        color: #ffd700;
+        margin-bottom: 1rem;
+    }
+
+    .text-content {
+        padding: 1rem 0;
+    }
+
+    .text-content p {
+        font-size: 1.2rem;
+        margin-bottom: 1.5rem;
+        line-height: 1.2;
+    }
+
+    .progress-main-container {
+        display: block;
+    }
+
+    .techstack {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .progress-container {
+        margin-bottom: 20px;
+        border: 1px solid #05283a;
+    }
+
+    .progress-bar {
+        height: 20px;
+        background-color: #74a5eb;
+        width: 0;
+        transition: width 1s ease-in-out;
+
+    }
+
+}
+
+
 
 /* **************** */
 
@@ -258,7 +392,7 @@ html {
     /* Dark background color */
     padding: 3rem 10%;
     color: #fff;
-    height: 600px;
+    height: 650px;
     overflow: hidden;
 }
 
@@ -285,7 +419,7 @@ html {
 .card-2-front,
 .card-3-front {
     width: 300px;
-    height: 400px;
+    height: 450px;
     background-color: rgb(38, 38, 46);
     text-align: center;
     box-shadow: 0 15px 30px rgba(0, 0, 0, 0.3);
@@ -296,7 +430,7 @@ html {
 .card-2-front img,
 .card-3-front img {
     width: 300px;
-    height: 180px;
+    height: 200px;
 }
 
 .position-title p {
@@ -307,7 +441,7 @@ html {
 
 .position-title p:first-child {
     font-weight: 700;
-    margin-top: 20px;
+    margin: 20px;
     margin-bottom: 20px;
 }
 
@@ -334,7 +468,7 @@ html {
 }
 
 
-.card-1-front:hover + .card-1-back{
+.card-1-front:hover+.card-1-back {
     transform: translateY(-100%);
 
 }
@@ -362,6 +496,85 @@ html {
 }
 
 
+
+
+
+@media screen and (max-width: 768px) {
+
+    #experience {
+        padding: 3rem 10%;
+        height: auto;
+
+    }
+
+    .experience-section {       
+        flex-wrap: wrap;
+        gap: 2rem;
+    }
+
+    #experience h2 {
+        font-size: 2rem;
+        margin-bottom: 2rem;
+    }
+
+    .card-1-front,
+    .card-2-front,
+    .card-3-front {
+        width: auto;
+
+    }
+
+    .card-1-front img,
+    .card-2-front img,
+    .card-3-front img {
+        width: 100%;
+    }
+
+    /* ******************** */
+
+    .card-1-back,
+    .card-2-back,
+    .card-3-back {
+        width: auto;
+        height: 450px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .card-1-back-js {
+        transform: translateY(-100%);
+    }
+    
+    
+    .card-1-front:hover+.card-1-back {
+        transform: translateY(-100%);
+    
+    }
+    
+    .card-1-back p,
+    .card-2-back p,
+    .card-3-back p {
+        font-size: 1.2rem;
+    }
+    
+    .card-1-back p:first-child,
+    .card-2-back p:first-child,
+    .card-3-back p:first-child {
+        padding-top: auto;
+    }
+    
+    .test {
+        position: relative;
+        background-color: #393E46;
+        width: auto;
+        height: auto;
+    }
+
+
+}
+
+
 /* ********************** */
 #project {
     background-color: #3b455a;
@@ -376,6 +589,7 @@ html {
     color: #FFD700;
 }
 
+
 .projects p {
     font-size: 1.5rem;
     margin: 1.5rem 0;
@@ -386,6 +600,7 @@ html {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 30px;
+
 }
 
 .project-container img {
@@ -394,11 +609,43 @@ html {
 
 }
 
-/* .projects video {
-    height: 200px;
-    transform: scale(120%);
-} */
+@media screen and (max-width: 768px) {
+    #project {
+        padding: 3rem 10%;    
+    }
+    
+    .projects h2 {
+        font-size: 2rem;
+    }
+    
+    .projects p {
+        font-size: 1.2rem;
 
+    }
+
+    .project-description p{
+        margin-bottom: 4rem;
+    }
+    
+    .project-container {
+        display: flex;
+        flex-direction: column;
+        gap: 3rem;
+    }
+
+    .project-container .project{
+        background-color: rgb(44, 62, 80);
+        box-shadow: 0 15px 30px rgba(44, 62, 80, 0.3);
+        padding: 1rem;
+
+
+    }
+
+    .project-container .project p{
+        text-align: left;
+    }
+    
+}
 
 /* *************************************** */
 #footer {
@@ -428,6 +675,8 @@ html {
 .social-links i {
     color: #FFD700;
     font-size: 3rem;
+    cursor: pointer;
+    
 
 }
 
@@ -453,4 +702,47 @@ html {
     text-align: center;
     color: #FFD700;
     font-size: 1.6rem;
+}
+
+
+@media screen and (max-width: 768px) {
+    #footer {
+        background-color: #1a202c;
+        padding: 2rem 10%;
+        color: white;
+    
+    }
+    
+    #footer h2 {
+        font-size: 2rem;
+        margin-bottom: 1.5rem;
+    
+    }
+    
+    .social-links {
+        gap: 2rem;
+
+    }
+    
+    .social-links i {
+        font-size: 2rem;
+    }
+    
+    .footer-links {
+        width: 90%;
+        margin: auto;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        column-gap: 3rem;
+        row-gap: 1rem;
+        padding: 0 1rem 2rem;
+    }
+    
+    .footer-links>a>li {
+        font-size: 1.2rem;
+    }
+    
+    .copyright {
+        font-size: 1.2rem;
+    } 
 }
