--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body{
 }
 
 .nav-bar.sticky-bg {
-    background-color: #0e46a2;;
+    background-color: #0e46a2;
 }
 
 .nav-links {
@@ -60,24 +60,15 @@ body{
     align-items: center;
     flex-wrap: wrap;
     overflow: hidden;
-    /* gap: 3rem; for tab responsive */
-    /* height: 100vh; */
 }
 
 .header {
     text-align: center;
-    /* color: #efecee; Light text color for contrast */
 }
 
 .mobile-hero-pic {
     display: none;
 }
-
-/* .title p {
-    font-size: 1.5rem;
-    font-weight: normal;
-    margin-bottom: 2rem;
-} */
 
 .title h1 {
     color: #fff; 
@@ -92,7 +83,6 @@ body{
     font-weight: 500;
     margin-top: 1rem;
     font-family: 'Montserrat', sans-serif;
-
 }
 
 .cursor {
@@ -130,8 +120,8 @@ body{
 
     font-size: 1.2rem;
     border-radius: 5px;
-    transition: all 0.3s ease;
     cursor: pointer;
+    transition: all 0.3s ease;
 
 }
 
@@ -430,7 +420,8 @@ body{
 .card-3-front {
     width: 300px;
     height: 480px;
-    background-color: rgb(34, 38, 43);
+    /* background-color: rgb(34, 38, 43); */
+    background-color: #1b273e;
     text-align: center;
     box-shadow: 0 15px 30px rgba(0, 0, 0, 0.3);
     border-radius: 10px;
@@ -444,7 +435,7 @@ body{
 .card-3-front img {
     width: 300px;
     height: 200px;
-    background-color: black;
+    background-color: #0e46a2;
 }
 
 .position-title p {
@@ -495,8 +486,7 @@ body{
     position: absolute;
     width: 300px;
     height: 480px;
-    background-color: rgb(62, 62, 75);
-    background-color: rgb(34, 38, 43);
+    background-color: #1b273e;
 
     border-radius: 10px;
     padding: 30px;
@@ -603,10 +593,9 @@ body{
 
 /* ********************** */
 #project {
-    background-color: #3b455a;
-    padding: 3rem 10%;
+    background-color: #152238;
+    padding: 5rem 10%;
     color: white;
-
 }
 
 .projects h2 {
@@ -615,9 +604,19 @@ body{
     margin-bottom: 2rem;
 }
 
+.project-description{
+    margin-bottom: 3rem;
+}
+
+.project-container .project{
+    /* background-color: rgb(9, 16, 29); */
+    background-color: #142035;
+    box-shadow: 0 15px 30px rgba(9, 16, 29, 0.3);
+    padding: 1rem;
+}
 
 .projects p {
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     margin: 1.5rem 0;
     line-height: 1.2;
 }
@@ -660,11 +659,8 @@ body{
     }
 
     .project-container .project{
-        background-color: rgb(44, 62, 80);
-        box-shadow: 0 15px 30px rgba(44, 62, 80, 0.3);
+        box-shadow: 0 15px 30px rgba(9, 16, 29, 0.5);
         padding: 1rem;
-
-
     }
 
     .project-container .project p{
@@ -675,7 +671,7 @@ body{
 
 /* *************************************** */
 #footer {
-    background-color: #1a202c;
+    background-color: #09101d;
     padding: 3rem 10%;
     color: white;
 
@@ -701,8 +697,6 @@ body{
     color: white;
     font-size: 3rem;
     cursor: pointer;
-    
-
 }
 
 .footer-links {
@@ -715,7 +709,6 @@ body{
 .footer-links>a {
     text-decoration: none;
     color: white;
-
 }
 
 .footer-links>a>li {
@@ -734,18 +727,15 @@ body{
         background-color: #1a202c;
         padding: 2rem 10%;
         color: white;
-    
     }
     
     #footer h2 {
         font-size: 2rem;
         margin-bottom: 1.5rem;
-    
     }
     
     .social-links {
         gap: 2rem;
-
     }
     
     .social-links i {
