--- a/style.css
+++ b/style.css
@@ -6,10 +6,9 @@
 
 html {
     scroll-behavior: smooth;
-
 }
 
-body{
+body {
     font-family: 'Quicksand', sans-serif;
 }
 
@@ -71,14 +70,14 @@ body{
 }
 
 .title h1 {
-    color: #fff; 
+    color: #fff;
     font-size: 4rem;
     font-weight: 700;
     margin-bottom: 1rem;
 }
 
 .subtitle h2 {
-    color: #b6c2e8; 
+    color: #b6c2e8;
     font-size: 1.8rem;
     font-weight: 500;
     margin-top: 1rem;
@@ -113,7 +112,7 @@ body{
     display: inline-block;
     padding: 1rem 2rem;
     text-decoration: none;
-    
+
     background-color: #efecee;
     border: 2px solid #efecee;
     color: #0e46a2;
@@ -122,7 +121,6 @@ body{
     border-radius: 5px;
     cursor: pointer;
     transition: all 0.3s ease;
-
 }
 
 .button:hover {
@@ -246,7 +244,7 @@ body{
 
     }
 
-    .button-cv{
+    .button-cv {
         margin-right: 1rem;
     }
 
@@ -267,11 +265,12 @@ body{
 }
 
 
-/*******************************/
+/*****************************************/
+
 /* Section 2: */
 
 .about-me {
-    background:#4f71ba;
+    background: #4f71ba;
     padding: 6rem 10%;
     color: #fff;
 }
@@ -340,7 +339,6 @@ body{
         font-size: 2rem;
         margin-bottom: 2rem;
         text-align: center;
-
     }
 
     .text-content {
@@ -372,15 +370,10 @@ body{
         background-color: #74a5eb;
         width: 0;
         transition: width 1s ease-in-out;
-
     }
-
 }
 
-
-
-/* **************** */
-
+/*****************************************/
 
 #experience {
     /* background:#6385ce;
@@ -455,13 +448,17 @@ body{
 }
 
 
-.circle-up-1,.circle-up-2,.circle-up-3{
+.circle-up-1,
+.circle-up-2,
+.circle-up-3 {
     display: inline-block;
     margin-bottom: 0.5rem;
     transform: rotate(180deg);
 }
 
-.circle-down-1,.circle-down-2,.circle-down-3{
+.circle-down-1,
+.circle-down-2,
+.circle-down-3 {
     display: inline-block;
     margin: 1rem;
 }
@@ -471,7 +468,7 @@ body{
 .circle-up-3 .fa-solid,
 .circle-down-1 .fa-solid,
 .circle-down-2 .fa-solid,
-.circle-down-3 .fa-solid{
+.circle-down-3 .fa-solid {
     cursor: pointer;
     font-size: 2rem;
     color: white;
@@ -506,12 +503,6 @@ body{
     transform: translateY(-560px);
 }
 
-
-/* .card-1-front:hover+.card-1-back {
-    transform: translateY(-100%);
-
-} */
-
 .card-1-back p,
 .card-2-back p,
 .card-3-back p {
@@ -531,7 +522,7 @@ body{
 
     }
 
-    .experience-section { 
+    .experience-section {
         justify-content: center;
         flex-wrap: wrap;
         gap: 3rem;
@@ -558,40 +549,29 @@ body{
         display: flex;
         flex-direction: column;
         transform: translateY(-32px);
-
-
-
     }
 
     .card-1-back-js {
         transform: translateY(-560px);
     }
-    
-    
+
+
     .card-1-back p,
     .card-2-back p,
     .card-3-back p {
         font-size: 1.2rem;
     }
-    
+
     .card-1-back p:first-child,
     .card-2-back p:first-child,
     .card-3-back p:first-child {
         padding-top: auto;
     }
-    
-    /* .test {
-        position: relative;
-        background-color: #393E46;
-        width: auto;
-        height: auto;
-    } */
-
-
 }
 
 
-/* ********************** */
+/*****************************************/
+
 #project {
     background-color: #152238;
     padding: 5rem 10%;
@@ -604,11 +584,11 @@ body{
     margin-bottom: 2rem;
 }
 
-.project-description{
+.project-description {
     margin-bottom: 3rem;
 }
 
-.project-container .project{
+.project-container .project {
     /* background-color: rgb(9, 16, 29); */
     background-color: #142035;
     box-shadow: 0 15px 30px rgba(9, 16, 29, 0.3);
@@ -636,52 +616,51 @@ body{
 
 @media screen and (max-width: 768px) {
     #project {
-        padding: 3rem 10%;    
+        padding: 3rem 10%;
     }
-    
+
     .projects h2 {
         font-size: 2rem;
     }
-    
+
     .projects p {
         font-size: 1.2rem;
 
     }
 
-    .project-description p{
+    .project-description p {
         margin-bottom: 4rem;
     }
-    
+
     .project-container {
         display: flex;
         flex-direction: column;
         gap: 3rem;
     }
 
-    .project-container .project{
+    .project-container .project {
         box-shadow: 0 15px 30px rgba(9, 16, 29, 0.5);
         padding: 1rem;
     }
 
-    .project-container .project p{
+    .project-container .project p {
         text-align: left;
     }
-    
+
 }
 
-/* *************************************** */
+/*****************************************/
+
 #footer {
     background-color: #09101d;
     padding: 3rem 10%;
     color: white;
-
 }
 
 #footer h2 {
     text-align: center;
     font-size: 2.5rem;
     margin-bottom: 2rem;
-
 }
 
 .social-links {
@@ -689,8 +668,6 @@ body{
     justify-content: center;
     gap: 3rem;
     margin-bottom: 2rem;
-
-
 }
 
 .social-links i {
@@ -728,20 +705,20 @@ body{
         padding: 2rem 10%;
         color: white;
     }
-    
+
     #footer h2 {
         font-size: 2rem;
         margin-bottom: 1.5rem;
     }
-    
+
     .social-links {
         gap: 2rem;
     }
-    
+
     .social-links i {
         font-size: 2rem;
     }
-    
+
     .footer-links {
         width: 90%;
         margin: auto;
@@ -751,13 +728,12 @@ body{
         row-gap: 1rem;
         padding: 0 1rem 2rem;
     }
-    
+
     .footer-links>a>li {
         font-size: 1.2rem;
     }
-    
+
     .copyright {
         font-size: 1.2rem;
-    } 
+    }
 }
-
