Made Tablet Responsive

--- a/style.css
+++ b/style.css
@@ -129,6 +129,15 @@ body {
 }
 
 
+/* Tablet Responsive */
+@media screen and (max-width: 1235px) {
+    .hero-section {
+        gap: 5rem;
+    }
+}
+
+
+/* Mobile Responsive */
 @media screen and (max-width: 768px) {
 
     .mobile-nav-bar-container {
@@ -318,8 +327,30 @@ body {
     display: none;
 }
 
+/* Tablet Responsive */
+@media screen and (max-width: 1235px) {
 
 
+    .content {
+        flex-direction: column;
+        gap: 2rem;
+        align-items: center;
+
+    }
+
+    .profile-pic {
+        height: 250px;
+        border-radius: 15px;
+        background: #b6c2e8;
+        transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .text-content {
+        flex-basis: 100%;
+    }
+}
+
+/* Mobile Responsive */
 @media screen and (max-width: 768px) {
     .about-me {
         padding: 3rem 10%;
@@ -513,7 +544,32 @@ body {
 }
 
 
+/* Tablet Responsive */
+@media screen and (max-width: 1235px) {
+    #experience {
+        padding: 3rem 10%;
+    }
+    
+    .experience-section {
+        flex-direction: column;
+        align-items: center;
+        gap: 3rem;
+    }
 
+    .card-1-back,
+    .card-2-back,
+    .card-3-back {
+        transform: translateY(-32px);
+    }
+
+    .card-1-back-js {
+        transform: translateY(-560px);
+    }
+
+}
+
+
+/* Mobile Responsive */
 @media screen and (max-width: 768px) {
 
     #experience {
@@ -614,6 +670,22 @@ body {
 
 }
 
+/* Tablet Responsive */
+@media screen and (max-width: 1235px) {
+    .project-container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: flex-start;
+        gap: 3rem;
+    }
+
+    .project-container .project{
+        width: 400px;
+    }
+}
+
+/* Mobile Responsive */
 @media screen and (max-width: 768px) {
     #project {
         padding: 3rem 10%;
@@ -635,10 +707,12 @@ body {
     .project-container {
         display: flex;
         flex-direction: column;
+        align-items: center;
         gap: 3rem;
     }
 
     .project-container .project {
+        width: 100%;
         box-shadow: 0 15px 30px rgba(9, 16, 29, 0.5);
         padding: 1rem;
     }
@@ -698,7 +772,7 @@ body {
     font-size: 1.6rem;
 }
 
-
+/* Mobile Responsive */
 @media screen and (max-width: 768px) {
     #footer {
         background-color: #1a202c;
@@ -720,7 +794,7 @@ body {
     }
 
     .footer-links {
-        width: 90%;
+        width: 80%;
         margin: auto;
         display: grid;
         grid-template-columns: 1fr 1fr;
